--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron center-block">
+      <div class="alert alert-info text-center">
         <h3>Make an appointment</h1>
       </div>
 
